fix: multi-select backgroun in dark mode
Fixes that the hover styles for the multi select made the text unreadable in dark mode.

--- a/report-app/src/app/shared/multi-select/multi-select.scss
+++ b/report-app/src/app/shared/multi-select/multi-select.scss
@@ -56,6 +56,6 @@ label {
 }
 
 label:hover {
-  background-color: #eff6ff;
+  background-color: var(--button-active-bg-color);
   border-radius: var(--border-radius);
 }
